--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,7 +30,7 @@ jobs:
       run: npm install
 
     - name: Running test
-      run: npx jest --detectOpenHandles --testTimeout=15000 --maxWorkers=2
+      run: npx jest  --ci --runInBand --detectOpenHandles --testTimeout=15000
 
     - name: Sending the results to codecov
       run: bash <(curl -s https://codecov.io/bash) -t ${{secrets.CODECOV_TOKEN}}
