--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,6 +26,10 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
 
+      env:
+        SECRET: ${{secrets.SECRET}}
+      run: echo "Hallo $SECRET , $env.SECRET"
+
     - name: Npm Install
       run: npm install
 
