--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,7 +26,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
 
-      run: echo "Hallo $SECRET , $env.SECRET"
+      run: echo "Hallo $SECRET "
       env:
         SECRET: ${{secrets.SECRET}}
 
