--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -35,6 +35,8 @@ jobs:
       run: npm install
 
     - name: Running test
+      env:
+        SECRET: ${{secrets.SECRET}}
       run: npm run test
 
     - name: Sending the results to codecov
